@@ -142,6 +142,14 @@ func TestNewDataConverter(t *testing.T) {
 	if _, err := NewDataConverter("unsupported"); err == nil || err.Error() != "unsupported converter definition: <unsupported>" {
 	}
 
+	hex, err := NewDataConverter(MetaString2Hex)
+	if err != nil {
+		t.Error(err)
+	}
+	exp := new(String2HexConverter)
+	if !reflect.DeepEqual(hex, exp) {
+		t.Errorf("Expected %+v received: %+v", exp, hex)
+	}
 }
 
 func TestNewDataConverterMustCompile(t *testing.T) {
@@ -614,7 +622,7 @@ func TestPhoneNumberConverter(t *testing.T) {
 }
 
 func TestHexConvertor(t *testing.T) {
-	hx := IP2HexConvertor{}
+	hx := IP2HexConverter{}
 	val := "127.0.0.1"
 	expected := "0x7f000001"
 	if rpl, err := hx.Convert(val); err != nil {
@@ -624,6 +632,63 @@ func TestHexConvertor(t *testing.T) {
 	}
 	val2 := net.ParseIP("127.0.0.1")
 	if rpl, err := hx.Convert(val2); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val3 := []byte("127.0.0.1")
+	if rpl, err := hx.Convert(val3); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val = ""
+	expected = ""
+	if rpl, err := hx.Convert(val); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val = "62.87.114.244"
+	expected = "0x3e5772f4"
+	if rpl, err := hx.Convert(val); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+}
+
+func TestStringHexConvertor(t *testing.T) {
+	hx := new(String2HexConverter)
+	val := "127.0.0.1"
+	expected := "0x3132372e302e302e31"
+	if rpl, err := hx.Convert(val); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val3 := []byte("127.0.0.1")
+	if rpl, err := hx.Convert(val3); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val = ""
+	expected = ""
+	if rpl, err := hx.Convert(val); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(expected, rpl) {
+		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
+	}
+
+	val3 = []byte{0x94, 0x71, 0x02, 0x31, 0x01, 0x59}
+	expected = "0x947102310159"
+	if rpl, err := hx.Convert(val3); err != nil {
 		t.Error(err)
 	} else if !reflect.DeepEqual(expected, rpl) {
 		t.Errorf("expecting: %+v, received: %+v", expected, rpl)
